[gd_scene load_steps=11 format=3 uid="uid://j48kbuc5aeum"]

[ext_resource type="Script" path="res://Scripts/time_control.gd" id="1_6fb1j"]
[ext_resource type="Texture2D" uid="uid://pavs2233hkpn" path="res://Sprites/Placeholder/PlaceholderWindowPurple.png" id="2_nf30l"]
[ext_resource type="Texture2D" uid="uid://dthf21hipu62o" path="res://Sprites/Placeholder/PlaceholderTimeNormal.png" id="3_vhw8u"]
[ext_resource type="Texture2D" uid="uid://bhxeff0mk3rfh" path="res://Sprites/Placeholder/PlaceholderTimePressed.png" id="4_pbkuy"]
[ext_resource type="Texture2D" uid="uid://d386w3in6d14n" path="res://Sprites/Placeholder/PlaceholderTimeHover.png" id="5_leqeb"]
[ext_resource type="Texture2D" uid="uid://20n54c6e2y5n" path="res://Sprites/Placeholder/PlaceholderTimeDisabled.png" id="6_u76gj"]
[ext_resource type="Texture2D" uid="uid://cjiava0wkwcum" path="res://Sprites/Placeholder/PlaceholderArrowNormal.png" id="7_mvenm"]
[ext_resource type="Texture2D" uid="uid://cecmycvanxigw" path="res://Sprites/Placeholder/PlaceholderArrowPressed.png" id="8_nyhpl"]
[ext_resource type="Texture2D" uid="uid://becv0hdlw2q07" path="res://Sprites/Placeholder/PlaceholderArrowHover.png" id="9_5iqx7"]
[ext_resource type="Texture2D" uid="uid://dph1gxboiu1m1" path="res://Sprites/Placeholder/PlaceholderArrowDisabled.png" id="10_2h3f0"]

[node name="TimeControl" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 293.0
offset_top = 3.0
offset_right = 391.0
offset_bottom = 43.0
script = ExtResource("1_6fb1j")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nf30l")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="TimeskipButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 65.0
offset_top = 4.0
offset_right = 97.0
offset_bottom = 36.0
texture_normal = ExtResource("3_vhw8u")
texture_pressed = ExtResource("4_pbkuy")
texture_hover = ExtResource("5_leqeb")
texture_disabled = ExtResource("6_u76gj")

[node name="HalveButton" type="TextureButton" parent="."]
layout_mode = 0
offset_top = 12.0
offset_right = 16.0
offset_bottom = 28.0
disabled = true
texture_normal = ExtResource("7_mvenm")
texture_pressed = ExtResource("8_nyhpl")
texture_hover = ExtResource("9_5iqx7")
texture_disabled = ExtResource("10_2h3f0")

[node name="DoubleButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 12.0
offset_right = 66.0
offset_bottom = 28.0
texture_normal = ExtResource("7_mvenm")
texture_pressed = ExtResource("8_nyhpl")
texture_hover = ExtResource("9_5iqx7")
texture_disabled = ExtResource("10_2h3f0")
flip_h = true

[node name="DurationLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 8.0
offset_right = 54.0
offset_bottom = 31.0
text = "1
"
horizontal_alignment = 1

[connection signal="pressed" from="TimeskipButton" to="." method="_on_timeskip_button_pressed"]
[connection signal="pressed" from="HalveButton" to="." method="_on_halve_button_pressed"]
[connection signal="pressed" from="DoubleButton" to="." method="_on_double_button_pressed"]
